v0.3.3 - UI: Add sidebar toggle visibility of selected/unselected - Fix: CefSharp locking local files requested.

--- a/MDbScriptTool/Content/app/css/app.less
+++ b/MDbScriptTool/Content/app/css/app.less
@@ -55,6 +55,25 @@ a:hover {
     color: @light-0;
 }
 
+// Link buttons
+.link-btn {
+  &:hover,
+  &:hover {
+    font-weight: bold;
+  }
+
+  &.active {
+    color: @accent2-0;
+    text-decoration: underline;
+
+    &:hover,
+    &:focus {
+      font-weight: normal;
+      cursor: default;
+    }
+  }
+}
+
 .animating {
     transition: all ease-out .5s;
 }
